# Generated by Django 6.0.8 on 2026-08-18 16:01

import django.db.models.deletion
import uuid
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('committees', '0003_committee_is_presidential_office'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Event',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid7, editable=False, primary_key=True, serialize=False)),
                ('title', models.CharField(max_length=255, verbose_name='Title')),
                ('description', models.TextField(blank=True, verbose_name='Description')),
                ('current_state', models.CharField(default='Draft', max_length=50, verbose_name='Current State')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Created At')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Updated At')),
                ('requester', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='requested_events', to=settings.AUTH_USER_MODEL, verbose_name='Requester')),
            ],
            options={
                'verbose_name': 'Event',
                'verbose_name_plural': 'Events',
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='Budget',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid7, editable=False, primary_key=True, serialize=False)),
                ('amount', models.DecimalField(decimal_places=2, default=0.0, max_digits=12, verbose_name='Amount')),
                ('status', models.CharField(default='Pending', max_length=50, verbose_name='Status')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Created At')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Updated At')),
                ('approved_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='approved_budgets', to=settings.AUTH_USER_MODEL, verbose_name='Approved By')),
                ('event', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='budget', to='events.event', verbose_name='Event')),
            ],
            options={
                'verbose_name': 'Budget',
                'verbose_name_plural': 'Budgets',
            },
        ),
        migrations.CreateModel(
            name='EventStateTransition',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid7, editable=False, primary_key=True, serialize=False)),
                ('from_state', models.CharField(max_length=50, verbose_name='From State')),
                ('to_state', models.CharField(max_length=50, verbose_name='To State')),
                ('action', models.CharField(max_length=100, verbose_name='Action')),
                ('note', models.TextField(blank=True, verbose_name='Note')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Created At')),
                ('actor', models.ForeignKey(null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='event_transitions_made', to=settings.AUTH_USER_MODEL, verbose_name='Actor')),
                ('event', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='state_transitions', to='events.event', verbose_name='Event')),
            ],
            options={
                'verbose_name': 'Event State Transition',
                'verbose_name_plural': 'Event State Transitions',
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='Request',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid7, editable=False, primary_key=True, serialize=False)),
                ('title', models.CharField(max_length=255, verbose_name='Title')),
                ('description', models.TextField(blank=True, verbose_name='Description')),
                ('current_state', models.CharField(default='Draft', max_length=50, verbose_name='Current State')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Created At')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Updated At')),
                ('assigned_to', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='assigned_requests', to=settings.AUTH_USER_MODEL, verbose_name='Assigned To')),
                ('committee', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='requests', to='committees.committee', verbose_name='Committee')),
                ('event', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='requests', to='events.event', verbose_name='Event')),
                ('requester', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='submitted_requests', to=settings.AUTH_USER_MODEL, verbose_name='Requester')),
            ],
            options={
                'verbose_name': 'Request',
                'verbose_name_plural': 'Requests',
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='RequestAssignmentHistory',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid7, editable=False, primary_key=True, serialize=False)),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Created At')),
                ('assigned_by', models.ForeignKey(null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='assignment_given_history', to=settings.AUTH_USER_MODEL, verbose_name='Assigned By')),
                ('assigned_to', models.ForeignKey(null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='assignment_received_history', to=settings.AUTH_USER_MODEL, verbose_name='Assigned To')),
                ('request', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='assignment_history', to='events.request', verbose_name='Request')),
            ],
            options={
                'verbose_name': 'Request Assignment History',
                'verbose_name_plural': 'Request Assignment Histories',
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='RequestEscalation',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid7, editable=False, primary_key=True, serialize=False)),
                ('reason_category', models.CharField(max_length=100, verbose_name='Reason Category')),
                ('description', models.TextField(verbose_name='Description')),
                ('status', models.CharField(default='Open', max_length=50, verbose_name='Status')),
                ('resolution_note', models.TextField(blank=True, verbose_name='Resolution Note')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Created At')),
                ('resolved_at', models.DateTimeField(blank=True, null=True, verbose_name='Resolved At')),
                ('handled_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='handled_escalations', to=settings.AUTH_USER_MODEL, verbose_name='Handled By')),
                ('raised_by', models.ForeignKey(null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='raised_escalations', to=settings.AUTH_USER_MODEL, verbose_name='Raised By')),
                ('request', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='escalations', to='events.request', verbose_name='Request')),
            ],
            options={
                'verbose_name': 'Request Escalation',
                'verbose_name_plural': 'Request Escalations',
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='RequestStateTransition',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid7, editable=False, primary_key=True, serialize=False)),
                ('from_state', models.CharField(max_length=50, verbose_name='From State')),
                ('to_state', models.CharField(max_length=50, verbose_name='To State')),
                ('action', models.CharField(max_length=100, verbose_name='Action')),
                ('note', models.TextField(blank=True, verbose_name='Note')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Created At')),
                ('actor', models.ForeignKey(null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='request_transitions_made', to=settings.AUTH_USER_MODEL, verbose_name='Actor')),
                ('request', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='state_transitions', to='events.request', verbose_name='Request')),
            ],
            options={
                'verbose_name': 'Request State Transition',
                'verbose_name_plural': 'Request State Transitions',
                'ordering': ['-created_at'],
            },
        ),
    ]
